# Python-PyBro-UI

./: .gitignore  LICENSE  README.md  TECHNICAL.md  pyproject.toml
docs/: CSS_CUSTOM.md  TECHNICAL.md  TOKENS.md  pybro.toml
examples/: all_patches_demo.py  all_tokens_v4.py  mytool.py  section_demo.py
examples/css_style_example/: custom_style_demo.py  custom_theme.css
examples/netsweep/: main.py  pybro.toml  scanner.py  utils.py
examples/pybro_demo/: main.py  pybro.toml  scanner.py  textarea_test.py  theme.css
src/pybro/: CSS_CUSTOM.md  TOKENS.md  __init__.py  handler.py  index.html  logger.py  mytool.py  parser.py  server.py  state.py  tree.py  watcher.py
src/pybro/static/: app.js  gatekeeper.js  poller.js  renderer.js  sse.js  state.js  utils.js
tests/: test_tree.py
