[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybro"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A lightweight, zero-dependency AST-driven UI runtime compiler for Python scripts."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: User Interfaces"
]
dependencies = []

[project.scripts]
pybro = "pybro.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pybro"]

[tool.hatch.build.targets.wheel.shared-data]
# Bundle index.html into the package so it is always available.
"src/pybro/index.html" = "pybro/index.html"
